--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="app">
-    <div class="page-title">2018年运行检修工区联合新春联欢会</div>
+    <div class="page-title">JSORZ-2018联合新春联欢会</div>
 
     <div class="game-block">
       <div class="game-title">
@@ -22,7 +22,7 @@
       <div class="game-content">
         <!-- 即将抽奖 -->
         <div class="game-ready" v-if="gameProcess.status === 'READY'">
-          <!-- <div class="big-text">Ready</div> -->
+          <div class="big-text">Ready...GO!</div>
         </div>
         <!-- 摇奖中 -->
         <div class="game-running" v-if="gameProcess.status === 'RUNNING'">
